создание компоновщика utm меток

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<div fxLayout="row" fxLayoutAlign="center stretch">
+  <div fxFlex="15"></div>
+  <div fxFlex="70">
+    <app-utm-generator></app-utm-generator>
+  </div>
+  <div fxFlex="15"></div>
+</div>
