--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,8 @@
 <div fxLayout="row" fxLayoutAlign="center stretch">
   <div fxFlex="15"></div>
-  <div fxFlex="70">
+  <div fxFlex="70" fxLayout="column">
     <app-utm-generator></app-utm-generator>
+    <app-check-widget></app-check-widget>
   </div>
   <div fxFlex="15"></div>
 </div>
