создание проверки виджета дкт

--- a/src/app/components/check-widget/check-widget.component.html
+++ b/src/app/components/check-widget/check-widget.component.html
@@ -9,8 +9,12 @@
     <mat-icon>check</mat-icon>
   </button>
 
-  <div fxFlex="100" fxLayout="column">
-    <div id="mango-calltracking1"></div>
+  <div fxLayout="column" fxFlex="100">
+    <div [innerHTML]="dynamicNumber"></div>
+    <div [innerHTML]="dynamicNumber"></div>
+    <div [innerHTML]="dynamicNumber"></div>
+    <div [innerHTML]="dynamicNumber"></div>
+    <a [href]="telDynamicNumber" [innerHTML]="dynamicNumber"></a>
   </div>
 
 </div>
