--- a/src/app/components/utm-generator/utm-generator.component.html
+++ b/src/app/components/utm-generator/utm-generator.component.html
@@ -23,10 +23,10 @@
   <mat-form-field fxFlex="100">
     <mat-label>Результат</mat-label>
     <input matInput [(ngModel)]="result">
-    <button mat-icon-button matSuffix (click)="copy()">
+    <button mat-icon-button matSuffix (click)="copy()" matTooltip="Скопировать">
         <mat-icon>content_copy</mat-icon>
     </button>
-    <button mat-icon-button matSuffix (click)="open()">
+    <button mat-icon-button matSuffix (click)="open()" matTooltip="Открыть">
         <mat-icon>open_in_new</mat-icon>
     </button>
   </mat-form-field>
