создание страницы "документация"

--- a/src/app/pages/doc/doc.component.html
+++ b/src/app/pages/doc/doc.component.html
@@ -1,3 +1,21 @@
-<p>
-  doc works!
-</p>
+<div fxLayout="row" fxLayoutAlign="start start">
+  <div fxFlex="20"></div>
+  <div fxFlex="60" fxLayout="column" fxLayoutAlign="start stretch">
+    <app-doc-guide></app-doc-guide>
+    <mat-divider></mat-divider>
+    <app-doc-how-it-works></app-doc-how-it-works>
+    <mat-divider></mat-divider>
+    <app-doc-utms></app-doc-utms>
+    <mat-divider></mat-divider>
+    <app-doc-utm-source></app-doc-utm-source>
+    <mat-divider></mat-divider>
+    <app-doc-utm-medium></app-doc-utm-medium>
+    <mat-divider></mat-divider>
+    <app-doc-utm-campaign></app-doc-utm-campaign>
+    <mat-divider></mat-divider>
+    <app-doc-utm-term></app-doc-utm-term>
+    <mat-divider></mat-divider>
+    <app-doc-utm-content></app-doc-utm-content>
+  </div>
+  <div fxFlex="20"></div>
+</div>
