создание страницы документация

--- a/src/app/components/doc-utm-campaign/doc-utm-campaign.component.html
+++ b/src/app/components/doc-utm-campaign/doc-utm-campaign.component.html
@@ -6,10 +6,10 @@
   Например:
 </p>
 <mat-list>
-  <mat-list-item>utm_campaign=kommercheskaya_nedvizhimost_mo</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>utm_campaign=kommercheskaya_nedvizhimost_mo</p></mat-list-item>
 </mat-list>
 <p>Также, хорошей практикой является вписывание в значение параметра utm_campaign id рекламной кампании в рекламной системе,
   тогда тег будет выглядеть так:</p>
 <mat-list>
-  <mat-list-item>utm_campaign=kommercheskaya_nedvizhimost_mo+2345678</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>utm_campaign=kommercheskaya_nedvizhimost_mo+2345678</p></mat-list-item>
 </mat-list>
