--- a/src/app/components/doc-utm-content/doc-utm-content.component.html
+++ b/src/app/components/doc-utm-content/doc-utm-content.component.html
@@ -2,12 +2,12 @@
 <p>UTM CONTENT – контейнер для дополнительной информации. Необязательная utm метка.</p>
 <p>В зависимости от целей отслеживания в данный тег можно помещать дополнительную информацию. Например:</p>
 <mat-list>
-  <mat-list-item>Транслитерированное или реальное ключевое слово (по аналогии с utm_term).</mat-list-item>
-  <mat-list-item>ID ключевой фразы из системы контекстной рекламы.</mat-list-item>
-  <mat-list-item>Транслитерированный текст заголовка или заголовка и объявления (очень специфичный и редко востребованный кейс).</mat-list-item>
-  <mat-list-item>Дату создания объявления или рекламной кампании.</mat-list-item>
-  <mat-list-item>Набор систем контекстной рекламы.</mat-list-item>
-  <mat-list-item>И прочими опциональными параметрами, которые рекламодатель желает отслеживать.</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>Транслитерированное или реальное ключевое слово (по аналогии с utm_term).</p></mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>ID ключевой фразы из системы контекстной рекламы.</p></mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>Транслитерированный текст заголовка или заголовка и объявления (очень специфичный и редко востребованный кейс).</p></mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>Дату создания объявления или рекламной кампании.</p></mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>Набор систем контекстной рекламы.</p></mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>И прочими опциональными параметрами, которые рекламодатель желает отслеживать.</p></mat-list-item>
 </mat-list>
 <p>Если utm-тег составной - то параметры входящие в него нужно разделять специальными символами. Например, знаком “|” (логическое
   или на языке регулярных выражений) или знаком “+”.</p>
