--- a/src/app/components/doc-utm-medium/doc-utm-medium.component.html
+++ b/src/app/components/doc-utm-medium/doc-utm-medium.component.html
@@ -3,7 +3,7 @@
   параметры (атрибуты). Для контекстной рекламы существует только одно обозначение срс, которое нужно вписывать правильно,
   строго следуя рекомендациям. То есть, код с указанием на контекстную рекламу выглядит так:</p>
 <mat-list>
-  <mat-list-item>utm_medium=cpc</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>utm_medium=cpc</p></mat-list-item>
 </mat-list>
 <p>От принятого стандарта отступать нельзя, поскольку малейшее нарушение может стать проблемой для систем веб-аналитики. А это,
   в свою очередь, приведет к потере данных или неправильному подсчету. Строго запрещается писать различные варианты вроде
@@ -15,10 +15,10 @@
     медийной рекламы на той же поисковой системе);</mat-list-item>
   <mat-list-item>price – данный атрибут указывает на рекламу, которая проводится на прайс-площадках, где оплата производится за клик (Яндекс.Маркет,
     товары Mail.ru);</mat-list-item>
-  <mat-list-item>retargeting – обозначение для рекламы на ретаргетинговых площадках (Mythings, Criteo и другие);</mat-list-item>
-  <mat-list-item>affiliate – атрибут указывает на ссылки партнерских программ (Admitad, Gdeslon);</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>retargeting – обозначение для рекламы на ретаргетинговых площадках (Mythings, Criteo и другие);</p></mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>affiliate – атрибут указывает на ссылки партнерских программ (Admitad, Gdeslon);</p></mat-list-item>
   <mat-list-item>social_cpc – данный параметр предназначен для рекламы, которая проводится в социальных сетях, и где оплата производится
     за клик;</mat-list-item>
-  <mat-list-item>special – атрибут ссылок на специальные проекты вроде закладок в Opera и других подобных проектах.</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>special – атрибут ссылок на специальные проекты вроде закладок в Opera и других подобных проектах.</p></mat-list-item>
 </mat-list>
 <p>Других строгих требований к прописыванию данной метки нет.</p>
