--- a/src/app/components/doc-utm-source/doc-utm-source.component.html
+++ b/src/app/components/doc-utm-source/doc-utm-source.component.html
@@ -6,8 +6,20 @@
   значения брать доменное имя (или доменное имя с обрезанной доменной зоной)</p>
 <p>Примеры:</p>
 <mat-list>
-  <mat-list-item>utm_source=google</mat-list-item>
-  <mat-list-item>utm_source=yandex</mat-list-item>
-  <mat-list-item>utm_source=mail.ru</mat-list-item>
-  <mat-list-item>utm_source=vk.com</mat-list-item>
+  <mat-list-item>
+    <mat-icon>navigate_next</mat-icon>
+    <p>utm_source=google</p>
+  </mat-list-item>
+  <mat-list-item>
+    <mat-icon>navigate_next</mat-icon>
+    <p>utm_source=yandex</p>
+  </mat-list-item>
+  <mat-list-item>
+    <mat-icon>navigate_next</mat-icon>
+    <p>utm_source=mail.ru</p>
+  </mat-list-item>
+  <mat-list-item>
+    <mat-icon>navigate_next</mat-icon>
+    <p>utm_source=vk.com</p>
+  </mat-list-item>
 </mat-list>
