--- a/src/app/components/doc-utm-term/doc-utm-term.component.html
+++ b/src/app/components/doc-utm-term/doc-utm-term.component.html
@@ -7,7 +7,7 @@
 <p>Существует несколько вариантов использования данного тега:</p>
 <p>Заполнение тега транслитерированной ключевой фразой из поисковой системы</p>
 <mat-list>
-  <mat-list-item>utm_term=kupit_odnokomnatnuju_kvartiru</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>utm_term=kupit_odnokomnatnuju_kvartiru</p></mat-list-item>
 </mat-list>
 <p>Этот вариант гарантирует, что данные в Google Analytics будут переданы без искажений (если использовать кириллицу в любом
   из тегов - то появляется вероятность, что для части переходов Google Analytics не сможет корректно распознать кодировку
@@ -15,7 +15,7 @@
 <p>Заполнение тега динамической переменной &#123;keyword&#125; - чтобы Яндекс.Директ сам в момент клика подставлял ключевую фразу (не
   путать с поисковым запросом).</p>
 <mat-list>
-  <mat-list-item>utm_term=&#123;keyword&#125;</mat-list-item>
+  <mat-list-item><mat-icon>navigate_next</mat-icon><p>utm_term=&#123;keyword&#125;</p></mat-list-item>
 </mat-list>
 <p>Данный вариант позволяет сократить трудозатраты на разметку, но чреват частично неточными данными в отчетах.</p>
 
