--- a/src/app/components/doc-utms/doc-utms.component.html
+++ b/src/app/components/doc-utms/doc-utms.component.html
@@ -6,6 +6,9 @@
 <p>Как выглядят utm-метки?</p>
 <p>Например, при переходе на сайт с объявления на поисковой выдаче Google, ссылка может выглядеть так:</p>
 <mat-list>
-  <mat-list-item>http://mysite.ru/?utm_source=google&utm_medium=cpc&utm_campaign=google_adwords</mat-list-item>
+  <mat-list-item>
+    <mat-icon>navigate_next</mat-icon>
+    <p>http://mysite.ru/?utm_source=google&utm_medium=cpc&utm_campaign=google_adwords</p>
+    </mat-list-item>
 </mat-list>
 <p>UTM метки бывают обязательные (utm_source, utm_medium, utm_campaign) и необязательные (utm_term, utm_content).</p>
