--- a/src/app/pages/api/api.component.html
+++ b/src/app/pages/api/api.component.html
@@ -1,3 +1,7 @@
-<p>
-  api works!
-</p>
+<div fxLayout="row" fxLayoutAlign="start start">
+  <div fxFlex="20"></div>
+  <div fxFlex="60" fxLayout="column" fxLayoutAlign="start stretch">
+    <app-emulator></app-emulator>
+  </div>
+  <div fxFlex="20"></div>
+</div>
