фикс binding для прод

--- a/src/app/components/check-widget/check-widget.component.html
+++ b/src/app/components/check-widget/check-widget.component.html
@@ -1,7 +1,7 @@
 <div fxFill fxLayout="row wrap" fxLayoutAlign="start start">
 
   <h1 fxFlex="100">Проверить код виджета</h1>
-  <mat-form-field [floatLabel]="auto" fxFlex="20">
+  <mat-form-field floatLabel="auto" fxFlex="20">
     <mat-label>Введите ID виджета</mat-label>
     <input matInput placeholder="224" type="numer" [(ngModel)]="wid">
   </mat-form-field>
