--- a/src/app/components/doc-guide/doc-guide.component.html
+++ b/src/app/components/doc-guide/doc-guide.component.html
@@ -1,6 +1,6 @@
 <h3 fxFlex="100" fxLayout="row" fxLayoutAlign="center">Руководство пользователя по настройке динамического коллтрекинга</h3>
 <div fxFlex="100" fxLayoutAlign="center" style="margin-bottom: 10px">
-  <a mat-raised-button color="warn" routerLink="https://www.mango-office.ru/support/calltracking_vs_analytics/podklyuchenie_dinamicheskogo_kolltrekinga/"
+  <a mat-raised-button color="warn" href="https://www.mango-office.ru/support/calltracking_vs_analytics/podklyuchenie_dinamicheskogo_kolltrekinga/"
     target="_blank">
     <span>Открыть</span>
     <mat-icon>open_in_new</mat-icon>
