--- a/src/app/components/utm-generator/utm-generator.component.html
+++ b/src/app/components/utm-generator/utm-generator.component.html
@@ -2,7 +2,7 @@
   <h1>Компоновщик UTM меток</h1>
 
   <h3 fxFlex="100">Сайт</h3>
-  <mat-form-field fxFlex="100" [floatLabel]="auto">
+  <mat-form-field fxFlex="100" floatLabel="auto">
     <mat-label>Введите адрес сайта</mat-label>
     <input matInput placeholder="https://example.com" [(ngModel)]="site" (input)="updateResult()">
   </mat-form-field>
