--- a/src/app/components/utm-input/utm-input.component.html
+++ b/src/app/components/utm-input/utm-input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field fxFlex="100" floatLabel="auto">
+<mat-form-field fxFlex="100" floatLabel="auto" fxFill>
   <mat-label>{{ utmName }}</mat-label>
   <input type="text" matInput [formControl]="utmControl" [matAutocomplete]="utmAuto" [placeholder]="utmPlaceholder">
 </mat-form-field>
