--- a/src/app/pages/api/api.component.html
+++ b/src/app/pages/api/api.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="start start">
-  <div fxFlex="20"></div>
-  <div fxFlex="60" fxLayout="column" fxLayoutAlign="start stretch">
+  <div fxFlex="20" fxFlex.xs="5" fxFlex.sm="5"></div>
+  <div fxFlex="60" fxLayout="column" fxLayoutAlign="start stretch" fxFlex.xs="90" fxFlex.sm="90">
     <app-emulator></app-emulator>
   </div>
-  <div fxFlex="20"></div>
+  <div fxFlex="20" fxFlex.xs="5" fxFlex.sm="5"></div>
 </div>
