--- a/src/app/pages/doc/doc.component.html
+++ b/src/app/pages/doc/doc.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="start start">
-  <div fxFlex="20"></div>
-  <div fxFlex="60" fxLayout="column" fxLayoutAlign="start stretch">
+  <div fxFlex="20" fxFlex.xs="5" fxFlex.sm="5"></div>
+  <div fxFlex="60" fxLayout="column" fxLayoutAlign="start stretch" fxFlex.xs="90" fxFlex.sm="90">
     <app-doc-guide></app-doc-guide>
     <mat-divider></mat-divider>
     <app-doc-how-it-works></app-doc-how-it-works>
@@ -17,5 +17,5 @@
     <mat-divider></mat-divider>
     <app-doc-utm-content></app-doc-utm-content>
   </div>
-  <div fxFlex="20"></div>
+  <div fxFlex="20" fxFlex.xs="5" fxFlex.sm="5"></div>
 </div>
