--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div fxLayout="row" fxLayoutAlign="center stretch">
-  <div fxFlex="15"></div>
-  <div fxFlex="70" fxLayout="column">
+  <div fxFlex="15" fxFlex.xs="5" fxFlex.sm="5"></div>
+  <div fxFlex="70" fxLayout="column" fxFlex.xs="90" fxFlex.sm="90">
     <app-utm-generator></app-utm-generator>
     <app-check-widget></app-check-widget>
   </div>
-  <div fxFlex="15"></div>
+  <div fxFlex="15" fxFlex.xs="5" fxFlex.sm="5"></div>
 </div>
