--- a/src/app/components/emulator/emulator.component.html
+++ b/src/app/components/emulator/emulator.component.html
@@ -1,10 +1,15 @@
-<div fxLayout="row wrap" fxLayoutAlign="start start">
+<div
+  fxLayout="row wrap"
+  fxLayoutAlign="start start">
   <h1 fxFlex="100">Эмулятор</h1>
   <mat-form-field floatLabel="auto" fxFlex="45">
     <mat-label>Идентификатор виджета</mat-label>
     <input matInput placeholder="224" [(ngModel)]="wid" (input)="updateResult()">
   </mat-form-field>
-  <mat-form-field floatLabel="auto" fxFlexOffset="10" fxFlex="45">
+  <mat-form-field
+    floatLabel="auto"
+    fxFlexOffset="10"
+    fxFlex="45">
     <mat-label>Токен</mat-label>
     <input matInput placeholder="ceb0b254e8d168a9712c290b1b6517102f775f14" [(ngModel)]="token" (input)="updateResult()">
   </mat-form-field>
@@ -23,7 +28,7 @@
   </mat-form-field>
   <mat-datepicker #pickerDateEnd></mat-datepicker>
 
-  <div fxLayout="row wrap" fxLayoutAlign="center center">
+  <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayout.xs="column" fxLayout.sm="column">
     <mat-select fxFlex="30" placeholder="Тип звонков" [(ngModel)]="callType" name="item" (selectionChange)="updateResult()">
       <mat-option *ngFor="let item of callTypes" [value]="item.value">
         {{item.viewValue}}
