--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,30 @@
 <div fxFill fxLayout="row" fxLayoutAlign="stretch">
-  <div fxFlex="5" fxLayout="row" fxLayoutAlign="center center">
+  <div fxFlex="5" fxLayout="row" fxLayoutAlign="center center" fxFlex.xs="15" fxFlex.sm="15">
     <img class="logo" src="favicon.ico" alt="">
   </div>
-  <button mat-button routerLink="/home">Главная</button>
-  <button mat-button routerLink="/doc">Документация</button>
-  <button mat-button routerLink="/api">API</button>
+  <button mat-button routerLink="/home" fxHide.xs fxHide.sm>Главная</button>
+  <button mat-button routerLink="/doc" fxHide.xs fxHide.sm>Документация</button>
+  <button mat-button routerLink="/api" fxHide.xs fxHide.sm>API</button>
+
+  <h2 fxFlex="25" fxHide fxShow.xs fxShow.sm fxLayoutAlign="start center">Dctninja</h2>
+  <div fxFlex="60" fxHide fxShow.xs fxShow.sm fxLayoutAlign="end center">
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <a mat-menu-item routerLink="/home">
+        <mat-icon>home</mat-icon>
+        <span>Главная</span>
+      </a>
+      <button mat-menu-item routerLink="/doc">
+          <mat-icon>receipt</mat-icon>
+        <span>Документация</span>
+      </button>
+      <button mat-menu-item routerLink="/api">
+        <mat-icon>code</mat-icon>
+        <span>API</span>
+      </button>
+    </mat-menu>
+  </div>
+
 </div>
