--- a/src/styles.sass
+++ b/src/styles.sass
@@ -30,7 +30,12 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 body
     margin: 0
-    font: 400 16px/20px Roboto, "Helvetica Neue", sans-serif
+    font: 400 16px/26px Roboto, "Helvetica Neue", sans-serif
+
+    .mat-list
+        .mat-list-item
+            height: auto
+            word-break: break-word
 
 ::-webkit-scrollbar-thumb
     background-color: #6e6e6e
