фикс отображения картинки для xs sm

--- a/src/app/components/doc-how-it-works/doc-how-it-works.component.html
+++ b/src/app/components/doc-how-it-works/doc-how-it-works.component.html
@@ -14,4 +14,4 @@
   клиент может определить неэффективные и эффективные объявления или рекламные компании и перенаправить рекламный бюджет
   на наиболее конверсионный рекламный канал.
 </p>
-<img fxFill src="/assets/calltracking.png">
+<img fxFlex="100" src="/assets/calltracking.png">
